# ai_vuln_project

./: .gitignore
ai/: config.py
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  docker-compose.yml  predictor_service.py  pyproject.toml  schemas.py  settings.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  assignments.py  auth.py  defectdojo.py  epss.py  findings.py  health.py  llm.py  model.py  notifications.py  predict.py  projects.py
backend/app/core/: auth.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  bootstrap.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 4ef91d35fda0_add_project_and_finding_models.py  9b7f4c2e1a8d_add_persistent_auth_notifications_and_dashboard_state.py  a1b2c3d4e5f6_add_user_project_assignments.py  (+1 more)
backend/app/db/models/: __init__.py  auth_session.py  finding.py  finding_event.py  notification.py  password_reset_token.py  project.py  project_setting.py  user.py  user_project_assignment.py
backend/app/schemas/: auth.py  base.py  chat.py  finding.py  project.py
backend/app/services/: dashboard.py  defectdojo.py  email.py  finding_identity.py  predictor.py  sast_ingestion.py
backend/tests/: auth_helpers.py  conftest.py  support.py  test_sast.py
backend/tests/integration/: smoke_test.py  test_app_flow.py  test_persistence.py
backend/tests/unit/: test_utils.py
backend/tests/unit/api/: __init__.py  test_assignments.py  test_middleware.py  test_validation.py
(+67 files in other folders)
